syntax="proto3";

package catalog;
option go_package="genproto/catalog_service";

import "catalog.proto";

service BrandService {
    rpc Create(Brand) returns (BrandResponse) {}
    rpc Update(Brand) returns (BrandResponse) {}
    rpc Find(FindRequest) returns (BrandsResponse) {}
    rpc Get(GetRequest) returns (BrandResponse) {}
    rpc Delete(DeleteRequest) returns (Empty) {}
}

message BrandResponse {
    Brand brand = 1;
}

message BrandsResponse {
    repeated Brand brands = 1;
    int64 count = 2;
}