syntax="proto3";

package catalog;
option go_package="genproto/catalog_service";


service PopularCategoryService {
    rpc Create(PopularCategoryCreateRequest) returns (PopularCategoryResponse) {}
    rpc Get(GetRequest) returns (PopularCategoryResponse) {}
    rpc Find(PopularCategoryFindRequest) returns (PopularCategoriesResponse) {}
    rpc Update(PopularCategoryUpdateRequest) returns (PopularCategoryResponse) {}
    rpc Delete(DeleteRequest) returns (Empty) {}
}
message PopularCategory {
    string id = 1;
    string name = 2;
    string slug = 3;
    string image = 4;
    bool   active = 5;
    int64  order = 6;
    string size = 7;
    string created_at = 8;
    string updated_at = 9;                                                                                          
}

message PopularCategoryUpdateRequest {
    string id = 1;
    string name = 2;
    string slug = 3;
    string image = 4;
    bool   active = 5;
    int64  order = 6;
    string size = 7;
}
message PopularCategoryFindRequest {
    int64  page = 1;
    string search = 2;
    int64  limit = 3;
    string sort = 4;
    bool   active = 5;
    bool   inactive = 6;  
}
message PopularCategoriesResponse {
    repeated PopularCategory popular_categories = 1;
    int64 count = 2;
}

message  PopularCategoryResponse {
    PopularCategory popular_category = 1;
}
message PopularCategoryCreateRequest {
    string name = 1;
    string image = 2;
    bool   active = 3;
    int64  order = 4; 
    string size  = 5;   
}


message DeleteRequest {
   string id = 1;
}

message Empty {
}







